Remove the logic for skipping the persistence of network quality when it matches the typical quality of the network

Bug: 806949
Change-Id: I02c8db315200e7ab28f72a0627015be15d8cfc4e
Reviewed-on: https://chromium-review.googlesource.com/890859
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532636}
Former-commit-id: 6b1d4918f33619719fa2360ada662f1d6e97070c